[project]
name = "ka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.17",
    "langchain-core>=0.3.35",
    "langchain-huggingface>=0.1.2",
    "pypdf>=5.3.0",
]
